cart overview overflow scroll fix

--- a/src/components/cart/cart.styles.css
+++ b/src/components/cart/cart.styles.css
@@ -14,6 +14,8 @@
 
 .cart-overview > .cart-items-wrapper{
     padding: 10px;
+    height: 70%;
+    overflow: scroll;
 }
 .cart-overview > .cart-items-wrapper > .empty-cart-text > .title{
     /* font-family: "Google Sans",sans-serif; */
